# scip

./: .dockerignore  .gitattributes  .gitignore  .prettierignore  .prettierrc  .tool-versions  CHANGELOG.md  DESIGN.md  Development.md  Dockerfile.bindings  README.md  Readme.md  buf.gen.yaml  buf.work.yaml  buf.yaml  checks.nix  flake.nix  go.mod  go.sum  go.work  go.work.sum  package.json  sample-indexes.nix  scip.proto
.github/: PULL_REQUEST_TEMPLATE.md  labeler.yml
.github/ISSUE_TEMPLATE/: sep.md
.github/actions/asdf/: action.yml
.github/workflows/: build-env-docker.yml  check-go.yml  check-in-sync.yml  check-repro-sync.yml  check-rust.yml  check-schema-sync.yml  check-typescript.yml  ci.yml  dry_run.yml  formatting.yml  golang.yml  haskell.yml  labeler.yml  nix-checks.yaml  nix.yml  pr-auditor.yml  project-board.yml  proto-review.yaml  protobuf-reprolang.yml  protobuf.yml  release.yaml  release.yml  reprolang.yml  rust.yml  scip-examples.yaml  typescript.yml
bindings/go/scip/: assertions.go  assertions_noop.go  canonicalize.go  canonicalize_test.go  convert.go  document.go  flatten_test.go  go.mod  go.sum  identifier.go  index_diagnostics.go  parse.go  parse_test.go  position.go  position_test.go  scip.pb.go  sort.go  sort_test.go  source_file.go  source_file_test.go  symbol.go  symbol_formatter.go  symbol_formatter_test.go  symbol_parser.go  symbol_role.go  symbol_test.go
bindings/go/scip/internal/: compat_test.go  old_symbol_parser.go
bindings/go/scip/internal/shared/: sample_indexes.go  shared.go
bindings/go/scip/memtest/: DO_NOT_ADD_NEW_TEST_FILES_HERE  low_mem_test.go
bindings/go/scip/speedtest/: speedtest_main.go
bindings/go/scip/testutil/: format.go  format_test.go  snapshot_testing.go  test_runner.go  test_runner_test.go
bindings/haskell/: README.md  if-proto-scip-hs.cabal  scip.cabal
bindings/haskell/src/Proto/: Scip.hs  Scip_Fields.hs
bindings/rust/: Cargo.toml  Readme.md
bindings/rust/src/: mod.rs  scip.rs  symbol.rs
bindings/typescript/: package-lock.json  package.json  scip.js  scip.ts  scip_pb.ts  tsconfig.json  type_error.ts
bindings/typescript_connect/: scip_pb.ts
cmd/: Readme.md  convert.go  json.go  json_test.go  lint.go  main.go  main_test.go  print.go  snapshot.go  snapshot_test.go  stats.go  utils.go  view.go
cmd/internal/testutil/: format.go  format_test.go
cmd/scip/: convert.go  convert_test.go  lint.go  lint_test.go  main.go  main_test.go  option_from.go  print.go  print_test.go  query.go  query_helpers.go  query_test.go  snapshot.go  stats.go  stats_test.go  test.go  test_test.go
cmd/scip/tests/reprolang/: .gitattributes  Cargo.toml  generate-tree-sitter-parser.sh  grammar.js  package.json
cmd/scip/tests/reprolang/bindings/go/repro/: ast.go  indexer.go  namer.go  parser.go  scip.go
cmd/scip/tests/reprolang/src/: grammar.json  node-types.json  parser.c  workaround.go
cmd/scip/tests/test_cmd/diagnostics/: fails-incorrect-diagnostic.repro  passes.repro
cmd/scip/tests/test_cmd/ranges/: fails.repro  passes.repro
cmd/scip/tests/test_cmd/roles/: fails-wrong-symbol.repro  passes.repro
cmd/tests/reprolang/: Cargo.toml  generate-tree-sitter-parser.sh  grammar.js
cmd/tests/reprolang/src/: node-types.json
cmd/tests/snapshots/input/missing-symbol-information/: locals.repro
cmd/tests/snapshots/output/implementation/: animal.repro  dump.lsif
cmd/tests/snapshots/output/missing-symbol-information/: dump.lsif  locals.repro
cmd/tests/snapshots/output/relationships/: dump.lsif
dev/: Dockerfile.bindings  build-docker-environment.sh  docker-entrypoint.sh  generate-all-in-docker.sh  proto-generate-in-docker.sh  proto-generate.sh  publish-release.sh
dev/sample_indexes/: .gitignore  indexes-metadata.json
docs/: CLI.md  DESIGN.md  Development.md  scip.md  scip.sprig  test_command.md  test_file_format.md
go/scip/: position.go  scip.pb.go  symbol_table.go  symbol_test.go
go/scip/testutil/: format.go  snapshot_testing.go
reprolang/: .gitattributes  Cargo.toml  README.md  generate-tree-sitter-parser.sh  go.mod  go.sum  grammar.js  package.json
reprolang/bindings/go/repro/: indexer.go  namer.go  parser.go  scip.go  snapshot_test.go  source_file.go  test_cmd_test.go
reprolang/bindings/node/: index.js
reprolang/grammar/: binding.go  binding_test.go  grammar.json  node-types.json  parser.c
reprolang/repro/: ast.go  dependency.go  indexer.go  namer.go  parser.go  scip.go  snapshot_test.go  source_file.go  test_cmd_test.go
reprolang/src/: grammar.json  node-types.json  parser.c
reprolang/testdata/snapshots/input/forward-def/: forward_def.repro
reprolang/testdata/snapshots/input/global-cross-repo/: reference.repro
reprolang/testdata/snapshots/input/global-workspace/: hello.repro
reprolang/testdata/test_cmd/diagnostics/: fails-no-diagnostic.repro
reprolang/tests/test_cmd/roles/: fails-wrong-role.repro
rust/src/: scip.rs
(+46 files in other folders)
