[package]
name = "scip"
version = "0.4.0"
edition = "2021"
license = "Apache-2.0"
description = """
SCIP (pronunciation: "skip") is a language-agnostic protocol for indexing source code, which can be used to power code navigation functionality such as Go to definition, Find references, and Find implementations.
"""
repository = "https://github.com/sourcegraph/scip"
readme = "Readme.md"

# We need >= 1.60.0 because the generated code uses
# https://doc.rust-lang.org/std/vec/struct.Vec.html#method.spare_capacity_mut
rust-version = "1.60.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Keep in sync with dev/proto-generate.sh
protobuf = "=3.2.0"

[dev-dependencies]
pretty_assertions = "1.2.1"

[lib]
name = "scip"
path = "src/mod.rs"
# disable doctests because generated/scip.rs has a perceived doctest.
doctest = false
