[package]
name = "scip"
version = "0.6.1"
edition = "2021"
license = "Apache-2.0"
description = """
SCIP (pronunciation: "skip") is a language-agnostic protocol for indexing source code, which can be used to power code navigation functionality such as Go to definition, Find references, and Find implementations.
"""
repository = "https://github.com/sourcegraph/scip"
readme = "../../README.md"

# We need >= 1.81.0 because: we only test against that
# in the CI (we use protobuf-codegen in CI, and that
# has home@0.5.11 as a dependency, which requires Rust >= 1.81.0).
rust-version = "1.81.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Keep in sync with dev/proto-generate.sh
protobuf = "=3.7.2"

[dev-dependencies]
pretty_assertions = "1.4.1"

[lib]
name = "scip"
path = "src/mod.rs"
# disable doctests because generated/scip.rs has a perceived doctest.
doctest = false
